--- a/css/style02.css
+++ b/css/style02.css
@@ -31,12 +31,16 @@ header img{
 .mission-statement {
     padding: 100px 50px;
     width: 500px;
+    display: flex;
+    display: inline-block;
+    
     
 }
 .mission-statement h2 {
     font-family: 'Poppins';
     font-size: 42px;
     margin: 20px 0px;
+    
     
 }
 
@@ -65,6 +69,23 @@ header img{
 }
 
 .social-icons {
-    align-content: flex-end;
+    width: 500px;
+    height: 180px;
+    display: inline-flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+
+.fa-brands {
+    color: white;
+    font-size: 30px;
+    padding: 10px;
+    
     
 }
+
+.fa-brands:hover{
+    color: hsl(300, 69%, 71%);
+}
+
